--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="search">
         <div class="mag"></div>
       </div>
-      <div class="new_folder">新建文件夹</div>
+      <div class="new_folder">新建条目</div>
     </nav>
     <article></article>
   </body>
