--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/artical.css" />
     <script src="./js/new_folder.js"></script>
     <title>note</title>
   </head>
@@ -14,11 +15,20 @@
       <div class="search">
         <div class="mag"></div>
       </div>
-      <div class="new_folder">新建条目</div>
+      <button id="new_folder">新建条目</button>
     </nav>
     <article>
       <div class="part">
-        <span class="content"></span>
+        <!-- <img src="./images/文件夹.png" alt="" /> -->
+        <span>javascript</span>
+      </div>
+      <div class="part">
+        <!-- <img src="./images/文件夹.png" alt="" /> -->
+        <span>关于房价问题</span>
+      </div>
+      <div class="part">
+        <!-- <img src="./images/文件夹.png" alt="" /> -->
+        <span></span>
       </div>
     </article>
   </body>
