✨ feat: 优化表现形式，添加删除按钮

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <article>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
-        <span></span>
+        <span>JavaScript</span>
       </div>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
-        <span></span>
+        <span
+          >你说是什么sdfoasfiass索尼大法教案设计地方北京三dfsajkdfjsandfjsnajkfs</span
+        >
       </div>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
