--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
     <article>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
-        <span>JavaScript</span>
+        <span>一次比较两个元素</span>
       </div>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
-        <span
-          >你说是什么sdfoasfiass索尼大法教案设计地方北京三dfsajkdfjsandfjsnajkfs</span
-        >
+        <span></span>
       </div>
       <div class="part">
         <!-- <img src="./images/文件夹.png" alt="" /> -->
